# haskell-json

./: README.md  brief.md  jsonparse.cabal
src/: FromJValue.hs  JValue.hs  JValueParser.hs  Main.hs  Person.hs  Utils.hs  person.json  testdata.json
